apps/other-resources/resources/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: demo-issuer
    cert-manager.io/issuer-kind: Issuer
spec:
  rules:
    - host: "argo.demo.alterus.io"
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: 80
  tls:
  - hosts:
    - argo.demo.alterus.io
    secretName: tls-argo-ingress
